testsuite/tests/vdq-rta/should_fail/T23739_fail_ret.hs
{-# LANGUAGE RequiredTypeArguments #-}

module T23739_fail_ret where

bad :: forall (a :: k) -> k
bad t = t
